# nextjs-react-sse-starter

./: README.md  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
api/: index.py
api/utils/: prompt.py
app/: layout.tsx  page.tsx
app/debug/: page.tsx
